--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dat": "^13.13.1",
     "express": "^4.17.1",
     "http": "0.0.1-security",
-    "is-ipfs": "^1.0.0"
+    "is-ipfs": "^1.0.0",
+    "ssb-client": "^4.9.0"
   }
 }
