forgot installing cors

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "Kaotisk Hund <kaotisk@arching-kaos.tk>",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "dat": "^13.13.1",
     "express": "^4.17.1",
     "http": "0.0.1-security",
