--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.17.3",
     "file-type": "^16.5.4",
     "http": "0.0.1-security",
+    "ipfs-core": "^0.10.8",
     "is-ipfs": "^1.0.3",
     "ssb-client": "^4.9.0"
   }
